--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lucide-react": "^0.288.0",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
-    "next": "13.5.6",
+    "next": "^13.5.4",
     "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
