--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.25.6",
+    "@clerk/nextjs": "^4.26.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -26,28 +26,29 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "html-react-parser": "^4.2.9",
-    "lucide-react": "^0.288.0",
+    "html-react-parser": "^5.0.1",
+    "lucide-react": "^0.290.0",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
-    "next": "^13.5.4",
+    "next": "^14.0.0",
     "prismjs": "^1.29.0",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "svix": "^1.13.0",
-    "tailwind-merge": "^1.14.0",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6",
+    "eslint-config-next": "14.0.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
